Bug 155412 - PowerPoint wants to repair these files after roundtrip
Summary: PowerPoint wants to repair these files after roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
: 155413 (view as bug list)
Depends on:
Blocks: OOXML-Doc-Themes
  Show dependency treegraph
 
Reported: 2023-05-19 20:17 UTC by Regina Henschel
Modified: 2023-06-16 14:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-05-19 20:17:04 UTC
I have tested the files covered by unit test
https://opengrok.libreoffice.org/xref/core/sd/qa/unit/import-tests.cxx

Open the below mentioned files and resave them as pptx. Open the saved files in PowerPoint. PowerPoint wants to repair them. Repair is successful.

The problem does not exist when the file is saved with a version from January e.g. Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

fdo47434.pptx
n819614.pptx
n820786.pptx
n762695.pptx
n593612.pptx
fdo71434.pptx
n902652.pptx
tdf90403.pptx
tdf100491.pptx
tdf109317.pptx

The files are in core/sd/qa/unit/data/
Comment 2 Regina Henschel 2023-05-19 21:55:58 UTC
You can use e.g. https://opengrok.libreoffice.org/xref/core/sd/qa/unit/data/
Then for example:
Find the line
	fdo47434.pptx	H A D	08-Dec-2013	31.7 KiB	
Click on the "D". That is 'Download'.
Comment 3 m_a_riosv 2023-05-19 22:20:25 UTC
I have no warning in PP with your mentioned file, and test with next odp (fdo64512.odp) saving a pptx and open with PP and no warning too.
Microsoft® PowerPoint® para Microsoft 365 MSO (versión 2304 compilación 16.0.16327.20200) de 64 bits
Comment 4 Regina Henschel 2023-05-20 12:05:43 UTC
Problem is with the files I have listed. fdo64512.odp is not among them.

Please try with the latest LO version. I see the error in Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: b3c88dc039d447322b8c8c564ab6e2f0ce9c5b90
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 5 Regina Henschel 2023-05-20 13:23:05 UTC
The problem seems to be the file theme1.xml in ppt/theme in the container. When I replace the file with the theme1.xml file from the original file, the document opens fine in PowerPoint.
Comment 6 Regina Henschel 2023-05-20 17:47:23 UTC
The problem is indeed in file theme1.xml. The mandatory attribute 'typeface' is missing in the <a:ea> element.

Proposed patch is in https://gerrit.libreoffice.org/c/core/+/152024
Comment 7 Regina Henschel 2023-05-20 20:45:16 UTC
Adding the missing typeface attribute fixes the files fdo47434, n758621 for pptx, n819614, n820786, n902652, tdf90338, tdf109317, tdf100491 and n593612.

PowerPoint still wants to repair n762695 and fdo71434.

n762695 has now the correct color.
n758621 in ppt version has still white text, same as it is with LO version from January.
Comment 8 Regina Henschel 2023-05-20 23:26:22 UTC
The files n762695.pptx and fdo71434.pptx open without problem in PowerPoint, when saved by LibreOffice Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4829a85d0753c93419bd46b1d50bcfa6f0f3f1da
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded

PowerPoint wants to repair them, when saved by LibreOffice Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 723a0a067daaefb8b082fc849713ee6502ec9231
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

I do not have builds in between to give a more narrow range. Knowing possible commits would be really helpful, because OOXML validator does not find the problem.
Comment 9 Regina Henschel 2023-05-21 09:40:52 UTC
Thinking again about it, a bibisect will likely not help, because the missing typeface attribute is already in revision 62529591 and will hide other reasons.
Comment 10 Commit Notification 2023-05-21 11:49:25 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/58926cc60c7868785c8db126fc199f6731269b86

tdf#155412 ooxml export typeface attribute is mandatory

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Regina Henschel 2023-05-21 12:01:06 UTC
*** Bug 155413 has been marked as a duplicate of this bug. ***
Comment 12 Regina Henschel 2023-05-21 12:17:12 UTC
I have written bug 155426 for the files n762695.pptx and fdo71434.pptx. They still have problems after the fix for this "typeface" problem.
Comment 13 m_a_riosv 2023-05-22 15:28:15 UTC
Verified for file fdo47434.pptx
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f4c24da1e7f11664e0d2f688d2531f068e4a3bc0
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 14 Aron Budea 2023-06-16 14:17:10 UTC
Looks like at least some of these were regressions from the following commit, ie. when theming support was added:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c3f7720ff13c34b9cf2c90d9c9b6dcc3d8f4c7a5
author		Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2023-03-23 11:37:40 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2023-04-24 23:49:57 +0200

oox: extend ThemeExport to export font and format scheme of a theme