tdf#155412 ooxml export typeface attribute is mandatory

The attribute 'typeface' is required for <a:ea>, <a:cs> and <a:latin>
elements, see CT_TextFont in ISO/IEC 29500-1:2016. Its value may be
the empty string.

(cherry picked from commit 58926cc60c7868785c8db126fc199f6731269b86)

Conflicts:
	oox/qa/unit/export.cxx

Change-Id: I7c9316fa40ad6d1aabccb4191fee11be553c453b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152024
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153183
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>